Changes in version 1.0
----------------------

* Forked Uncommons Antlib 0.3.3 and removed DocBook and Maven support.

* Converted names, packages and paths to Rectangular Software ones.

* Simplified macros by assuming all projects are single-module Android apps.

* Updated to latest versions of TestNG, ReportNG and Cobertura.

* Removed bundled Proguard.  Now uses Android SDK version instead.

* Fix for Proguard obfuscation on case-insensitive file systems.

* Output Proguard mapping file by default.

* Load properties from local.properties by default.